assets/sass/_dialog.scss
$dialog-spacing: 4px;

.dialog-container {
  padding: 0 $gutter-width / 2;

  header {
    position: relative;
    height: 64px;
    overflow: hidden;

    .actions {
      top: $element-bottom-margin;
      right: -4px;
    }
  }

  .dialog-message {
    display: block;
    position: relative;
    margin: $dialog-spacing * 2 0;

    &:hover { background: darken($body-bg, 2%); }

    &.error, &.notice {
      padding-left: $gutter-width / 2;
      padding-right: $gutter-width / 2;
      border-left: 2px solid color('grey', 'lighten-1');
    }
    &.action {
      .message, a.title {
        font-style: italic;
        display: inline;
      }
      .link-embedder {
        font-style: normal;
      }
    }
    &.day-changed {
      color: lighten($off-black, 40%);
      text-align: center;
      border-bottom: 1px solid lighten($input-border-color, 24%);
      margin-bottom: $gutter-width;
      height: $gutter-width / 2;
      &:hover { background: transparent; }
      span { background: #fff; padding: 0 8px; }
    }
    &.error {
      border-left: 2px solid color('red', 'accent-3');
      color: lighten($off-black, 40%);
      a { color: lighten(color('red', 'accent-3'), 20%); }
    }
    &.highlight .message {
      color: color('red', 'accent-2');
    }
    &.notice {
      border-left: 2px solid color('grey', 'lighten-1');
      color: lighten($off-black, 40%);
      a { color: lighten($link-color, 20%); }
    }
    &.same-user {
      margin-top: -$dialog-spacing;
    }
    &.same-user {
      a.title, .secondary-content { display: none; }
    }

    .message {
      a { color: inherit; text-decoration: underline; }
      a:hover { text-decoration: none; }

      .material-icons {
        vertical-align: text-top;
        font-size: 18px;
        margin-left: 4px;
      }
    }

    .secondary-content {
      position: absolute;
      top: 2px;
      right: 0;
      &, a {
        color: color('grey', 'darken-1');
        font-size: 0.8rem;
        overflow: hidden;
        display: block;
      }
      i {
        vertical-align: bottom;
      }
    }
  }
}

.user-input {
  border-top: 1px solid lighten($input-border-color, 24%);
  box-sizing: content-box; // border-top makes an extra scrollbar appear without this

  .actions {
    text-align: right;
    overflow: visible;
    position: relative;
    height: 0;
    top: -34px;
    right: 1px;
    a {
      display: inline-block;
      margin-right: -$dialog-spacing;
      padding: $dialog-spacing 6px;
    }
    i { vertical-align: bottom; }
  }

  textarea.materialize-textarea {
    max-height: 11.5rem;
    margin: 8px 0;
    padding: 0;
    overflow: auto;
    box-sizing: border-box;
  }
}

